--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "abort-controller": "^3.0.0",
     "async-mutex": "^0.3.1",
     "bignumber.js": "^9.0.1",
+    "crypto": "0.0.3",
     "eth-query": "^2.1.2",
     "ethereumjs-util": "^7.0.10",
     "human-standard-token-abi": "^2.0.0",
